--- a/resources/parametres.cfg
+++ b/resources/parametres.cfg
@@ -1,12 +1,12 @@
 FenetreLargeur=1000
 FenetreHauteur=800
 Joueur1IA=false
-Joueur1IADifficulte=moyenne
+Joueur1IADifficulte=1
 Joueur1Score=0
-Joueur2IA=true
-Joueur2IADifficulte=facile
+Joueur2IA=false
+Joueur2IADifficulte=1
 Joueur2Score=0
-JoueurQuiCommence=false
+JoueurQuiCommence=true
 NbLignes=10
 NbColonnes=10
 PleinEcran=false
