Modif arbre et ou

--- a/resources/parametres.cfg
+++ b/resources/parametres.cfg
@@ -3,10 +3,10 @@ FenetreHauteur=800
 Joueur1IA=false
 Joueur1IADifficulte=1
 Joueur1Score=0
-Joueur2IA=false
-Joueur2IADifficulte=1
+Joueur2IA=true
+Joueur2IADifficulte=2
 Joueur2Score=0
 JoueurQuiCommence=true
-NbLignes=10
-NbColonnes=10
+NbLignes=3
+NbColonnes=3
 PleinEcran=false
